--- a/package.json
+++ b/package.json
@@ -25,5 +25,18 @@
     "eslint-plugin-react-refresh": "^0.5.0",
     "globals": "^16.5.0",
     "vite": "^7.3.1"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aditibhosale1102/Quiz-APP.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aditibhosale1102/Quiz-APP/issues"
+  },
+  "homepage": "https://github.com/aditibhosale1102/Quiz-APP#readme"
 }
